# OpenSTKPConnector

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CODEX_BRIEF.md  DEVELOPMENT.md  PROTOCOL.md  README.md  RESEARCH.md
docs/: COMMUNITY_POST.md  COMPATIBILITY.md  TEST_PLAN.md  protocol.md
docs/Wireshark/: stream.txt
include/: datarefs.h  logger.h  protocol.h  tcp_server.h
scripts/: check_protocol_datarefs.sh  check_release_ready.sh  package_release.sh
src/: datarefs.cpp  logger.cpp  plugin.cpp  protocol.cpp  tcp_server.cpp
